--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,22 @@
-# This is a basic workflow to help you get started with Actions
 
 name: CI
 
 # Controls when the workflow will run
 on:
+  workflow_dispatch:
+    inputs:
+      choise:
+        description: Choise
+        required: true
+        type: choice
+        options:
+          - opt1
+          - opt2
+          - opt3
+          - opt4
+          - opt5
+          - opt6
+
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
@@ -32,5 +45,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
           echo test, and deploy your project.
+          echo "${{ inputs.choice }}"
+          echo "${{ inputs.choice.description }}"
+          echo "${{ inputs.choice.required }}"
+          echo "${{ inputs.choice.type }}"
+          echo "${{ inputs.choice.options }}"
+
