--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      choise:
+      field:
         description: Choise
         required: true
         type: choice
@@ -44,9 +44,9 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo test, and deploy your project.
-          echo "${{ github.event.inputs.choice }}"
-          echo "${{ github.event.inputs.choice.description }}"
-          echo "${{ github.event.inputs.choice.required }}"
-          echo "${{ github.event.inputs.choice.type }}"
-          echo "${{ github.event.inputs.choice.options }}"
+          echo "${{ github.event.inputs.field }}"
+          echo "${{ github.event.inputs.field.description }}"
+          echo "${{ github.event.inputs.field.required }}"
+          echo "${{ github.event.inputs.field.type }}"
+          echo "${{ github.event.inputs.field.options }}"
 
