--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -66,3 +66,43 @@ jobs:
       - name: Test conditions
         if: ${{ github.event.inputs.field == 'opt6' }}
         run: echo "It's working ${{ github.event.inputs.field }}"
+
+  matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - id: set-matrix
+        run: |
+          matrix=$(echo $(cat src/index.json))
+          echo $matrix
+          echo $matrix | jq .
+          echo "::set-output name=matrix::$matrix"
+
+  check-matrix:
+    runs-on: ubuntu-latest
+    needs: matrix
+    steps:
+      - name: Install json2yaml
+        run: |
+          sudo npm install -g json2yaml
+
+      - name: Check matrix definition
+        run: |
+          matrix='${{ needs.matrix.outputs.matrix }}'
+          echo $matrix
+          echo $matrix | jq .
+          echo $matrix | json2yaml
+
+  backend:
+    needs: matrix
+
+    strategy:
+      fail-fast: false
+      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
+
+    steps:
+      - name: echo
+        run: echo ${{ matrix.package }}
