--- a/.github/workflows/workflow_run_test.yml
+++ b/.github/workflows/workflow_run_test.yml
@@ -4,23 +4,22 @@ on:
   Workflow_run:
     workflows: [Master Check failure, Master Check success]
     types: [completed]
-    branches: [ master ]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
-  on-failure:
+  preparation:
     runs-on: ubuntu-latest
-    if: ${{ github.event.Workflow_run.conclusion == 'failure' }}
     steps:
-      - name: break build
+      - name: break build if master check faild
+        if: ${{ github.event.Workflow_run.conclusion == 'failure' }}
         run: |
           echo "Master check faild"
           exit 1
 
-
   info:
     runs-on: ubuntu-latest
-    needs: on-failure
+    needs: preparation
     steps:
       - name: info
         run: echo "Job Started"
