--- a/.github/workflows/workflow_run_test.yml
+++ b/.github/workflows/workflow_run_test.yml
@@ -1,7 +1,7 @@
 name: Workflow run test
 
 on:
-  Workflow_run:
+  workflow_run:
     workflows: 
       - Master Check failure
       - Master Check success
